welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:6: error: value lenght is not a member of Array[Int]
  return test/(nums.lenght)
                    ^